@@ -16,6 +16,7 @@ Only tickets not included in 3.1.0alpha1
 * Bug fixes *
   - #4652, Fix several memory related bugs in ST_GeomFromGML (Raúl Marín)
   - #4661, Fix access to spatial_ref_sys with a non default schema (Raúl Marín)
+  - #4670, ST_AddPoint: Fix bug when a positive position is requested (Raúl Marín)
 
 PostGIS 3.1.0alpha1
 2020/02/01
